Added hover mode on lightmode

--- a/global.css
+++ b/global.css
@@ -506,3 +506,8 @@ textarea {
 #default.dark img {
   filter: brightness(0.9);
 }
+
+#lightMode:hover {
+  cursor: grab;
+  transform: scale(1.3);
+}
